Fixing visited footer colours
...from black (invisible) to near-white (visible)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -122,7 +122,7 @@ footer p {
 }
 
 footer a:visited {
-	color: rgb(7, 10, 7);
+	color: rgb(225, 222, 213);
 }
 
 @media screen and (max-width: 510px) {
